2005-11-09  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTabbedPane.java
	(setComponent): Added check to prevent infinite loops.
	* javax/swing/plaf/metal/MetalTabbedPaneUI.java
	(createLayoutManager): Should call super here, so the layout
	is set properly depending on the layout mode.

2005-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/Demo.java
	(mkMenuBar): added file chooser item,
	(mkButtonBar): split buttons into two rows, added 'FileChooser' button,
	* examples/gnu/classpath/examples/swing/FileChooserDemo.java: New file.

2005-11-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* org/omg/PortableInterceptor/ObjectReferenceFactory.java: Do not
	inherit	from org.omg.CORBA.Object.

2005-11-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/ComponentUI.java
	(update): Restore the foreground color after filling the background.

2005-11-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paint): Fetch a new componentGraphics here instead of
	paintComponent.
	(paintComponent): Don't fetch the componentGraphics here. This
	must be done in paint.

2005-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java
	(setModel): throw IllegalArgumentException for null model.

2005-11-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTextUI.java
	(getVisibleEditorRect): Correctly calculate the inner rectangle.

2005-11-09  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c 
	(initStaticState): Register global variable glyphVector_class 
	as global reference.

2005-11-08  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/text/DefaultCaret.java (BlinkTimerListener):  
	Added ignoreNextEvent flag and its handling.
	(blinkListener): New field. (initBlinkTimer): 
	Initialise blinkListener field.
	(setDot, moveDot): Call appear() instead of repaint(). 